<resources>

    <string name="app_name">Sneaker</string>
    
    <string name="tab1">DAILY</string>
    <string name="tab2">JOGGING</string>
    <string name="tab3">COMMUNITY</string>
    
    <string name="drawer_new">show plat</string>
    <string name="drawer_favorite">favorite</string>
    <string name="drawer_hot">pretty hot</string>
    <string name="drawer_random">random</string>
    <string name="drawer_feedback">feedback</string>
    <string name="drawer_upload">upload</string>
    <string name="drawer_setting">settings</string>
    
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="over">Over</string>
    <string name="time">Time: </string>
    <string name="distance">Distance: </string>
    <string name="share">Share</string>
    <string name="step">Step:</string>
    
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">(Email/Phone)</string>
    <string name="password">(Password)</string>
    <string name="skip">Skip</string>
    <string name="dialog_skip">You will not be able to use cloud sync if you skip. </string>
    <string name="dialog_skip_title">Tips</string>
    <string name="dialog_skip_konw">Know</string>
    <string name="dialog_skip_login">Login</string>
    <string name="dialog_logining">Please waiting</string>
    
    <string name="name">(Name)</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="reset">Reset</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="modify">Modify</string>
    <string name="yearmonthday">Year-Month-Day</string>
    <string name="cm">CM</string>
    <string name="kilo">KG</string>
    
    <string name="exit_again">press again to exit</string>
    

</resources>
