<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:fitsSystemWindows="true"
    android:background="@color/app_theme_color">
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_skip"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:background="@drawable/imgbtn_bg"
            android:gravity="center_vertical">
            <TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/skip"
            	android:textColor="@color/white"
            	android:textSize="18sp"
            	android:layout_marginLeft="10dp"   
            	android:focusable="true"
 				android:focusableInTouchMode="true"   
            	/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginTop="1dp"/>
        </LinearLayout>
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_account"
            android:scaleType="fitXY"
            android:layout_marginTop="60dp"/>
        
        <RelativeLayout 
            android:id="@+id/operation"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@drawable/card_frame">
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >
                    
                    <EditText 
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minWidth="250dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawablePadding="5dp"/>
                    
                    <EditText
                    	android:id="@+id/et_password"
                    	android:layout_width="match_parent"
                    	android:layout_height="wrap_content"
                    	android:hint="@string/password"
                    	android:textSize="16sp"
                    	android:inputType="textPassword"
                    	android:minWidth="250dp" 
                    	android:drawableStart="@drawable/ic_lock"
                    	android:drawablePadding="5dp"/>
                   </LinearLayout>

            </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp">
                <Button 
                	android:id="@+id/opv_register"
                	android:layout_weight="1"
                	android:layout_height="40dp"
                	android:layout_width="0dp"
                	android:background="@drawable/btn_register"
                	android:textColor="@color/white"
                	android:layout_margin="20dp"
                	android:text="@string/register"/>
                <Button 
                	android:id="@+id/opv_login"
                	android:layout_weight="1"
                	android:layout_height="40dp"
                	android:layout_width="0dp"
                	android:background="@drawable/btn_login"
                	android:textColor="@color/white"
                	android:layout_margin="20dp"
                	android:text="@string/login"/>
            </LinearLayout>"
           "
        </RelativeLayout>
        
    </RelativeLayout>

</LinearLayout>
