<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_theme_color" 
    android:fitsSystemWindows="true"
    android:clipToPadding="true">
    <include 
        layout="@layout/actionbar"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
        
        <android.support.v4.widget.DrawerLayout
        	android:id="@+id/drawer_layout"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent" >

        	<!-- The main content view -->

        	<RelativeLayout
            	android:id="@+id/content_frame"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent" >
            	
            	<LinearLayout  
        			android:id="@+id/tab"  
        			android:layout_width="fill_parent"  
        			android:layout_height="40.0dp"
        			android:background="@color/app_theme_color" >  
  
        			<TextView  
            			android:id="@+id/tab1"  
            			android:layout_width="fill_parent"  
            			android:layout_height="fill_parent"  
            			android:layout_weight="1.0"  
            			android:gravity="center"  
            			android:text="@string/tab1"  
            			android:textColor="#ffffff"  
            			android:textSize="20sp" />  
  
        			<TextView  
            			android:id="@+id/tab2"  
            			android:layout_width="fill_parent"  
            			android:layout_height="fill_parent"  
            			android:layout_weight="1.0"  
            			android:gravity="center"  
            			android:text="@string/tab2"  
            			android:textColor="#ffffff"  
            			android:textSize="20sp" />  
  
        			<TextView  
            			android:id="@+id/tab3"  
            			android:layout_width="fill_parent"  
            			android:layout_height="fill_parent"  
            			android:layout_weight="1.0"  
            			android:gravity="center"  
            			android:text="@string/tab3"  
            			android:textColor="#ffffff"  
            			android:textSize="20sp" />  
        		</LinearLayout>  
        		<LinearLayout 
            		android:layout_width="fill_parent"
            		android:layout_height="5dp"
            		android:background="@color/app_theme_color"
            		android:id="@+id/tabcursor"
            		android:layout_below="@id/tab">
            		<ImageView  
        				android:id="@+id/cursor"  
        				android:layout_width="fill_parent"  
        				android:layout_height="5dp"  
        				android:scaleType="matrix"  
        				android:src="@drawable/cursor" 
        			/> 
        		</LinearLayout>
        
        		<android.support.v4.view.ViewPager  
       				android:id="@+id/vPager"  
        			android:layout_width="match_parent"  
        			android:layout_height="match_parent"  
        			android:background="#ffffff"  
        			android:flipInterval="30"  
        			android:persistentDrawingCache="animation" 
        			android:layout_below="@id/tabcursor"/>

            	
        	</RelativeLayout>

        	<!-- The navigation drawer -->
        	
        	<RelativeLayout 
        	    android:id="@+id/left_drawer"
        	    android:layout_width="280dp"
            	android:layout_height="match_parent"
            	android:layout_gravity="start"
            	android:background="@color/app_theme_color">
        		<include 
        		    layout="@layout/drawer"/>
        	</RelativeLayout>

        	
    	</android.support.v4.widget.DrawerLayout>


    </RelativeLayout>
    

</LinearLayout>
